--- a/README
+++ b/README
@@ -1,2 +1,19 @@
-DWM CONFIG (6r3eN)
-saved 07/15/2025
+# 6r3eN's DWM Config
+
+My personal build of [dwm](https://dwm.suckless.org/) — patched, tweaked, and themed to my liking.
+
+## 🧩 Features
+- Centered window layout
+- Transparent bar with custom colors
+- Nerd Font support
+- Keybindings for launching apps, layout switching, and more
+
+## 📸 Screenshot
+Coming soon... (or add one if you want)
+
+## 🛠️ Installation
+
+```sh
+git clone https://github.com/6r3eN/dwm.git
+cd dwm
+sudo make clean install
